--- a/Project/ui/cancel_sale.ui
+++ b/Project/ui/cancel_sale.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>306</width>
+    <width>312</width>
     <height>75</height>
    </rect>
   </property>
@@ -26,6 +26,15 @@
    </item>
    <item>
     <layout class="QHBoxLayout" name="buttonLayout">
+     <property name="spacing">
+      <number>40</number>
+     </property>
+     <property name="leftMargin">
+      <number>30</number>
+     </property>
+     <property name="rightMargin">
+      <number>30</number>
+     </property>
      <item>
       <widget class="QPushButton" name="btnCancel">
        <property name="text">
