--- a/Project/ui/product_menu.ui
+++ b/Project/ui/product_menu.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>480</width>
-    <height>638</height>
+    <width>563</width>
+    <height>803</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
@@ -140,7 +140,14 @@
           </widget>
          </item>
          <item row="0" column="1">
-          <widget class="QLineEdit" name="addProductCodeLineEdit"/>
+          <widget class="QLineEdit" name="addProductCodeLineEdit">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
+          </widget>
          </item>
          <item row="1" column="0">
           <widget class="QLabel" name="addProductNameFieldLbl">
@@ -150,7 +157,14 @@
           </widget>
          </item>
          <item row="1" column="1">
-          <widget class="QLineEdit" name="addProductNameLineEdit"/>
+          <widget class="QLineEdit" name="addProductNameLineEdit">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
+          </widget>
          </item>
          <item row="2" column="0">
           <widget class="QLabel" name="addCategoryFieldLbl">
@@ -161,6 +175,12 @@
          </item>
          <item row="2" column="1">
           <widget class="QComboBox" name="addCategoryComboBox">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
            <item>
             <property name="text">
              <string>Other</string>
@@ -191,7 +211,14 @@
           </widget>
          </item>
          <item row="3" column="1">
-          <widget class="QLineEdit" name="addCostPriceLineEdit"/>
+          <widget class="QLineEdit" name="addCostPriceLineEdit">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
+          </widget>
          </item>
          <item row="4" column="0">
           <widget class="QLabel" name="addSellingPriceFieldLbl">
@@ -209,6 +236,12 @@
          </item>
          <item row="5" column="1">
           <widget class="QLineEdit" name="addUnitLineEdit">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
            <property name="text">
             <string>EACH</string>
            </property>
@@ -225,10 +258,24 @@
           </widget>
          </item>
          <item row="6" column="1">
-          <widget class="QLineEdit" name="addSupplierLineEdit"/>
+          <widget class="QLineEdit" name="addSupplierLineEdit">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
+          </widget>
          </item>
          <item row="4" column="1">
-          <widget class="QLineEdit" name="addSellingPriceLineEdit"/>
+          <widget class="QLineEdit" name="addSellingPriceLineEdit">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
+          </widget>
          </item>
         </layout>
        </item>
@@ -247,19 +294,15 @@
        </item>
        <item>
         <layout class="QHBoxLayout" name="add_actionBtns">
-         <item>
-          <spacer name="horizontalSpacer">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
+         <property name="spacing">
+          <number>40</number>
+         </property>
+         <property name="leftMargin">
+          <number>30</number>
+         </property>
+         <property name="rightMargin">
+          <number>30</number>
+         </property>
          <item>
           <widget class="QPushButton" name="btnAddOk">
            <property name="text">
@@ -317,7 +360,14 @@
           </widget>
          </item>
          <item row="2" column="1">
-          <widget class="QLineEdit" name="removeProductCodeLineEdit"/>
+          <widget class="QLineEdit" name="removeProductCodeLineEdit">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
+          </widget>
          </item>
          <item row="3" column="0">
           <widget class="QLabel" name="removeSearchFieldLbl">
@@ -327,7 +377,14 @@
           </widget>
          </item>
          <item row="3" column="1">
-          <widget class="QComboBox" name="removeSearchComboBox"/>
+          <widget class="QComboBox" name="removeSearchComboBox">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
+          </widget>
          </item>
          <item row="5" column="0">
           <widget class="QLabel" name="removeProductNameFieldLbl">
@@ -337,7 +394,14 @@
           </widget>
          </item>
          <item row="5" column="1">
-          <widget class="QLineEdit" name="removeProductNameLineEdit"/>
+          <widget class="QLineEdit" name="removeProductNameLineEdit">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
+          </widget>
          </item>
          <item row="6" column="0">
           <widget class="QLabel" name="removeCategoryFieldLbl">
@@ -347,7 +411,14 @@
           </widget>
          </item>
          <item row="6" column="1">
-          <widget class="QLineEdit" name="removeCategoryLineEdit"/>
+          <widget class="QLineEdit" name="removeCategoryLineEdit">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
+          </widget>
          </item>
          <item row="7" column="0">
           <widget class="QLabel" name="removeCostPriceFieldLbl">
@@ -357,7 +428,14 @@
           </widget>
          </item>
          <item row="7" column="1">
-          <widget class="QLineEdit" name="removeCostPriceLineEdit"/>
+          <widget class="QLineEdit" name="removeCostPriceLineEdit">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
+          </widget>
          </item>
          <item row="8" column="0">
           <widget class="QLabel" name="removeSellingPriceFieldLbl">
@@ -367,7 +445,14 @@
           </widget>
          </item>
          <item row="8" column="1">
-          <widget class="QLineEdit" name="removeSellingPriceLineEdit"/>
+          <widget class="QLineEdit" name="removeSellingPriceLineEdit">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
+          </widget>
          </item>
          <item row="9" column="0">
           <widget class="QLabel" name="removeUnitFieldLbl">
@@ -378,6 +463,12 @@
          </item>
          <item row="9" column="1">
           <widget class="QLineEdit" name="removeUnitLineEdit">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
            <property name="readOnly">
             <bool>true</bool>
            </property>
@@ -392,6 +483,12 @@
          </item>
          <item row="10" column="1">
           <widget class="QLineEdit" name="removeSupplierLineEdit">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
            <property name="readOnly">
             <bool>true</bool>
            </property>
@@ -405,7 +502,14 @@
           </widget>
          </item>
          <item row="11" column="1">
-          <widget class="QLineEdit" name="removeLastUpdatedLineEdit"/>
+          <widget class="QLineEdit" name="removeLastUpdatedLineEdit">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
+          </widget>
          </item>
          <item row="1" column="0">
           <spacer name="verticalSpacer_2">
@@ -488,19 +592,15 @@
        </item>
        <item>
         <layout class="QHBoxLayout" name="remove_actionBtns">
-         <item>
-          <spacer name="horizontalSpacer">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
+         <property name="spacing">
+          <number>40</number>
+         </property>
+         <property name="leftMargin">
+          <number>30</number>
+         </property>
+         <property name="rightMargin">
+          <number>30</number>
+         </property>
          <item>
           <widget class="QPushButton" name="btnRemoveOk">
            <property name="text">
@@ -587,7 +687,14 @@
           </widget>
          </item>
          <item row="2" column="1">
-          <widget class="QLineEdit" name="updateProductCodeLineEdit"/>
+          <widget class="QLineEdit" name="updateProductCodeLineEdit">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
+          </widget>
          </item>
          <item row="3" column="0">
           <widget class="QLabel" name="updateSearchFieldLbl">
@@ -597,7 +704,14 @@
           </widget>
          </item>
          <item row="3" column="1">
-          <widget class="QComboBox" name="updateSearchComboBox"/>
+          <widget class="QComboBox" name="updateSearchComboBox">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
+          </widget>
          </item>
          <item row="4" column="0">
           <spacer name="verticalSpacer_3">
@@ -646,7 +760,14 @@
           </widget>
          </item>
          <item row="7" column="1">
-          <widget class="QLineEdit" name="updateProductNameLineEdit"/>
+          <widget class="QLineEdit" name="updateProductNameLineEdit">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
+          </widget>
          </item>
          <item row="8" column="0">
           <widget class="QLabel" name="updateCategoryFieldLbl">
@@ -656,7 +777,14 @@
           </widget>
          </item>
          <item row="8" column="1">
-          <widget class="QComboBox" name="updateCategoryComboBox"/>
+          <widget class="QComboBox" name="updateCategoryComboBox">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
+          </widget>
          </item>
          <item row="9" column="0">
           <widget class="QLabel" name="updateCostPriceFieldLbl">
@@ -666,7 +794,14 @@
           </widget>
          </item>
          <item row="9" column="1">
-          <widget class="QLineEdit" name="updateCostPriceLineEdit"/>
+          <widget class="QLineEdit" name="updateCostPriceLineEdit">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
+          </widget>
          </item>
          <item row="10" column="0">
           <widget class="QLabel" name="updateSellingPriceFieldLbl">
@@ -676,7 +811,14 @@
           </widget>
          </item>
          <item row="10" column="1">
-          <widget class="QLineEdit" name="updateSellingPriceLineEdit"/>
+          <widget class="QLineEdit" name="updateSellingPriceLineEdit">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
+          </widget>
          </item>
          <item row="11" column="0">
           <widget class="QLabel" name="updateUnitFieldLbl">
@@ -687,6 +829,12 @@
          </item>
          <item row="11" column="1">
           <widget class="QLineEdit" name="updateUnitLineEdit">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
            <property name="text">
             <string>EACH</string>
            </property>
@@ -703,7 +851,14 @@
           </widget>
          </item>
          <item row="12" column="1">
-          <widget class="QLineEdit" name="updateSupplierLineEdit"/>
+          <widget class="QLineEdit" name="updateSupplierLineEdit">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
+          </widget>
          </item>
          <item row="13" column="0">
           <widget class="QLabel" name="updateLastUpdatedFieldLbl">
@@ -714,6 +869,12 @@
          </item>
          <item row="13" column="1">
           <widget class="QLineEdit" name="updateLastUpdatedLineEdit">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
            <property name="readOnly">
             <bool>true</bool>
            </property>
@@ -768,19 +929,15 @@
        </item>
        <item>
         <layout class="QHBoxLayout" name="update_actionBtns">
-         <item>
-          <spacer name="horizontalSpacer">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
+         <property name="spacing">
+          <number>40</number>
+         </property>
+         <property name="leftMargin">
+          <number>30</number>
+         </property>
+         <property name="rightMargin">
+          <number>30</number>
+         </property>
          <item>
           <widget class="QPushButton" name="btnUpdateOk">
            <property name="text">
